@@ -428,8 +428,9 @@ process job result page
 sub job_page {
     my($c) = @_;
 
-    my $job  = $c->req->parameters->{'job'};
-    my $json = $c->req->parameters->{'json'} || 0;
+    my $job    = $c->req->parameters->{'job'};
+    my $json   = $c->req->parameters->{'json'}   || 0;
+    my $cancel = $c->req->parameters->{'cancel'} || 0;
     $c->stash->{no_auto_reload} = 1;
     return $c->detach('/error/index/22') unless defined $job;
     if($json) {
@@ -438,6 +439,11 @@ sub job_page {
 
     my($is_running,$time,$percent,$message,$forward) = get_status($c, $job);
     return $c->detach('/error/index/22') unless defined $is_running;
+
+    if($cancel) {
+        cancel($c, $job);
+        return;
+    }
 
     # try to directly serve the request if it takes less than 10seconds
     while($is_running and $time < 10) {
