@@ -1,79 +1,127 @@
-﻿<!-- thruk: waiting for job [% job_id %] -->
-<div id="[% progressbarid %]" style="width: [% width %]px; height:[% height %]px; color: inherit;"[% IF show_message %] onmouseover="return pb_overlib_[% progressbarid %]()"[% END %]><div align="center" class="job_time" style="z-index: 100;  line-height: [% lineheight %]px; position: absolute; width: [% width %]px; color: inherit;">[% job_time %]s</div></div>
+﻿<!-- thruk: waiting for job [% pb_options.job_id %] -->
+<div id="[% pb_options.id %]" style="position: relative; width: [% pb_options.width %]px; height:[% pb_options.height %]px; color: inherit;" [% IF pb_options.show_message %]onmouseover="return pb_overlib_[% pb_options.id %]()"[% ELSE %]onmouseover="return pb_overin_[% pb_options.id %]()"[% END %] onmouseout="return pb_overout_[% pb_options.id %]()">
+  <div align="center" class="job_time" style="z-index: 100; line-height: [% pb_options.lineheight %]px; position: absolute; width: [% pb_options.width %]px; color: inherit;">[% pb_options.time %]s</div>
+  <div id="cancel_[% pb_options.id %]" title="terminate this job" style="z-index: 100; line-height: [% pb_options.lineheight %]px; position: absolute; left: 3px; display: none;" class="clickable" onclick="return pb_cancel_[% pb_options.id %]()">
+    <img src="[% url_prefix %]themes/[% theme %]/images/stop.png">
+  </div>
+</div>
 <script type="text/javascript">
 <!--
+    var last_time_[% pb_options.id %]      = 0;
+    var last_message_[% pb_options.id %]   = '';
+    var last_remaining_[% pb_options.id %] = '';
+    var last_overmsg_[% pb_options.id %]   = '';
+    var is_loading_[% pb_options.id %]     = false;
+    var is_killed_[% pb_options.id %]      = false;
+
     jQuery(function() {
-        jQuery( "#[% progressbarid %]" ).progressbar({
-            value: [% job_percent %]
+        jQuery( "#[% pb_options.id %]" ).progressbar({
+            value: [% pb_options.percent %]
         });
     });
 
-    function pb_overlib_[% progressbarid %]() {
-        overlib("<div id='over_[% progressbarid %]'><\/div>",CAPTION,'report status',WIDTH,200,[% c.config.info_popup_options %]);
-        jQuery("#over_[% progressbarid %]").html(last_overmsg_[% progressbarid %]);
+    function pb_overlib_[% pb_options.id %]() {
+        overlib("<div id='over_[% pb_options.id %]'><\/div>",CAPTION,'report status',WIDTH,200,[% c.config.info_popup_options %]);
+        jQuery("#over_[% pb_options.id %]").html(last_overmsg_[% pb_options.id %]);
+        pb_overin_[% pb_options.id %]();
         return;
     }
 
-    var last_time_[% progressbarid %]      = 0;
-    var last_message_[% progressbarid %]   = '';
-    var last_remaining_[% progressbarid %] = '';
-    var last_overmsg_[% progressbarid %]   = '';
-    var is_loading_[% progressbarid %]     = false;
-    function update_job_progressbar_[% progressbarid %]() {
-        var datestr = Math.round((new Date()).getTime()/1000);
-        var val = jQuery( "#[% progressbarid %]" ).progressbar( "value" );
+    function pb_overin_[% pb_options.id %]() {
+        [% IF pb_options.exists('hide_cancel_btn') && pb_options.hide_cancel_btn %]
+        return;
+        [% END %]
+        jQuery("#cancel_[% pb_options.id %]").show();
+        return;
+    }
 
-        // update every 2 seconds
-        if(last_time_[% progressbarid %] != 0 && datestr%2 != 0 && val < 100) {
-            last_time_[% progressbarid %] = last_time_[% progressbarid %] + 1;
-            jQuery("#[% progressbarid %]").progressbar( "value", val + [% percent_per_second %] );
-            jQuery("#[% progressbarid %] DIV.job_time").html(last_time_[% progressbarid %] + "s" + last_message_[% progressbarid %]);
-            return;
+    function pb_overout_[% pb_options.id %]() {
+        if(jQuery("#cancel_[% pb_options.id %]").children()[0].src.match("stop.png")) {
+            jQuery("#cancel_[% pb_options.id %]").hide();
         }
-        if(is_loading_[% progressbarid %]) { return; }
-        is_loading_[% progressbarid %] = true;
+        return;
+    }
+
+    function pb_cancel_[% pb_options.id %]() {
+        is_killed_[% pb_options.id %] = true;
+        clearInterval(timer_[% pb_options.id %]);
+        jQuery("#cancel_[% pb_options.id %]").children()[0].src = "[% url_prefix %]themes/[% theme %]/images/loading-icon.gif";
+        jQuery("#[% pb_options.id %] DIV.job_time").html("killing...");
+
+        /* send kill request and reload afterwards */
+        var datestr = Math.round((new Date()).getTime()/1000);
         jQuery.ajax({
-            url: "job.cgi?job=[% job_id %]&json=1&_"+datestr,
+            url: "job.cgi?job=[% pb_options.job_id %]&cancel=1&_"+datestr,
             type: 'POST',
             dataType: 'json',
             success: function(data, status, jqXHR) {
-                is_loading_[% progressbarid %] = false;
+                jQuery("#[% pb_options.id %] DIV.job_time").html("killed");
+                jQuery("#cancel_[% pb_options.id %]").hide();
+                reloadPage();
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                reloadPage();
+            }
+        });
+        return;
+    }
+
+    function update_job_progressbar_[% pb_options.id %]() {
+        var datestr = Math.round((new Date()).getTime()/1000);
+        var val = jQuery( "#[% pb_options.id %]" ).progressbar( "value" );
+
+        // update every 2 seconds
+        if(last_time_[% pb_options.id %] != 0 && datestr%2 != 0 && val < 100) {
+            last_time_[% pb_options.id %] = last_time_[% pb_options.id %] + 1;
+            jQuery("#[% pb_options.id %]").progressbar( "value", val + [% pb_options.percent_per_second %] );
+            jQuery("#[% pb_options.id %] DIV.job_time").html(last_time_[% pb_options.id %] + "s" + last_message_[% pb_options.id %]);
+            return;
+        }
+        if(is_loading_[% pb_options.id %]) { return; }
+        is_loading_[% pb_options.id %] = true;
+        jQuery.ajax({
+            url: "job.cgi?job=[% pb_options.job_id %]&json=1&_"+datestr,
+            type: 'POST',
+            dataType: 'json',
+            success: function(data, status, jqXHR) {
+                if(is_killed_[% pb_options.id %]) { return; }
+                is_loading_[% pb_options.id %] = false;
                 if(data.percent != 0) {
-                    jQuery( "#[% progressbarid %]" ).progressbar( "value", data.percent );
+                    jQuery( "#[% pb_options.id %]" ).progressbar( "value", data.percent );
                 }
                 if(data.percent != 100) {
-                    if([% show_message %] && data.message) { last_message_[% progressbarid %] = " - " + data.message; }
-                    if(data.remaining && data.remaining != -1) { last_remaining_[% progressbarid %] = data.remaining; } else { last_remaining_[% progressbarid %] = ''; }
-                    var title = last_message_[% progressbarid %] + '<br>progress: ' + Math.round(data.percent)+"%<br>";
-                    if(last_remaining_[% progressbarid %]) {
-                        title = title + "(~"+last_remaining_[% progressbarid %]+" seconds remaining for this step)";
+                    if([% pb_options.show_message %] && data.message) { last_message_[% pb_options.id %] = " - " + data.message; }
+                    if(data.remaining && data.remaining != -1) { last_remaining_[% pb_options.id %] = data.remaining; } else { last_remaining_[% pb_options.id %] = ''; }
+                    var title = last_message_[% pb_options.id %] + '<br>progress: ' + Math.round(data.percent)+"%<br>";
+                    if(last_remaining_[% pb_options.id %]) {
+                        title = title + "(~"+last_remaining_[% pb_options.id %]+" seconds remaining for this step)";
                     }
-                    jQuery("#over_[% progressbarid %]").html(title);
-                    last_overmsg_[% progressbarid %] = title;
-                    last_time_[% progressbarid %] = data.time;
-                    jQuery("#[% progressbarid %] DIV.job_time").html(data.time + "s"+last_message_[% progressbarid %]);
+                    jQuery("#over_[% pb_options.id %]").html(title);
+                    last_overmsg_[% pb_options.id %] = title;
+                    last_time_[% pb_options.id %] = data.time;
+                    jQuery("#[% pb_options.id %] DIV.job_time").html(data.time + "s"+last_message_[% pb_options.id %]);
                 }
             },
             error: function(jqXHR, textStatus, errorThrown) {
-                is_loading_[% progressbarid %] = false;
-                last_time_[% progressbarid %]++;
+                is_loading_[% pb_options.id %] = false;
+                last_time_[% pb_options.id %]++;
             }
         });
 
-        var val = jQuery( "#[% progressbarid %]" ).progressbar("value");
+        var val = jQuery( "#[% pb_options.id %]" ).progressbar("value");
         if(val >= 100) {
-            clearInterval(timer_[% progressbarid %]);
+            clearInterval(timer_[% pb_options.id %]);
             reloadPage();
             return;
         } else {
-            jQuery( "#[% progressbarid %]" ).progressbar( "value", val + [% percent_per_second %] );
+            jQuery( "#[% pb_options.id %]" ).progressbar( "value", val + [% pb_options.percent_per_second %] );
         }
     }
 
-    [% IF job_percent != 100 %]
-    var timer_[% progressbarid %];
+    [% IF pb_options.percent != 100 %]
+    var timer_[% pb_options.id %];
     jQuery(function() {
-        timer_[% progressbarid %] = window.setInterval(update_job_progressbar_[% progressbarid %], 1000);
+        timer_[% pb_options.id %] = window.setInterval(update_job_progressbar_[% pb_options.id %], 1000);
     });
     [% END +%]
 -->
